# zmk-config-o67r

./: CMakeLists.txt  Kconfig  build.yaml
boards/shields/o67r/: Kconfig.defconfig  Kconfig.shield  o67r-layouts.dtsi  o67r.conf  o67r.dtsi  o67r.keymap  o67r.zmk.yml  o67r_dongle.conf  o67r_dongle.overlay  o67r_left.conf  o67r_left.overlay  o67r_left_central.conf  o67r_left_central.overlay  o67r_right.conf  o67r_right.overlay  o67r_usb_dongle.conf
boards/shields/o67r/_boards/: xiao_ble.overlay
boards/shields/o67r/boards/: raytac_mdbt50q_rx.overlay  seeeduino_xiao_ble.overlay  xiao_ble.overlay  xiao_ble_zmk.overlay
config/: west.yml
dts/bindings/input/: o67r,cst816s.yaml
src/: disp.c  o67r_layer_status_screen.c  raedme.txt  swapper.py
